; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_intr_remapping.c_map_dev_to_ir.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_intr_remapping.c_map_dev_to_ir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_iommu = type { i32 }
%struct.pci_dev = type { i32 }
%struct.dmar_drhd_unit = type { %struct.intel_iommu* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.intel_iommu* @map_dev_to_ir(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.intel_iommu*, align 8
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca %struct.dmar_drhd_unit*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %3, align 8
  %5 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %6 = call %struct.dmar_drhd_unit* @dmar_find_matched_drhd_unit(%struct.pci_dev* %5)
  store %struct.dmar_drhd_unit* %6, %struct.dmar_drhd_unit** %4, align 8
  %7 = load %struct.dmar_drhd_unit*, %struct.dmar_drhd_unit** %4, align 8
  %8 = icmp ne %struct.dmar_drhd_unit* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store %struct.intel_iommu* null, %struct.intel_iommu** %2, align 8
  br label %14

10:                                               ; preds = %1
  %11 = load %struct.dmar_drhd_unit*, %struct.dmar_drhd_unit** %4, align 8
  %12 = getelementptr inbounds %struct.dmar_drhd_unit, %struct.dmar_drhd_unit* %11, i32 0, i32 0
  %13 = load %struct.intel_iommu*, %struct.intel_iommu** %12, align 8
  store %struct.intel_iommu* %13, %struct.intel_iommu** %2, align 8
  br label %14

14:                                               ; preds = %10, %9
  %15 = load %struct.intel_iommu*, %struct.intel_iommu** %2, align 8
  ret %struct.intel_iommu* %15
}

declare dso_local %struct.dmar_drhd_unit* @dmar_find_matched_drhd_unit(%struct.pci_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
